added link to github

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
    <div class="connect">
    	<div class="section-title">let's connect!</div>
     <div class="content">
-      Email me at <a href="mailto:stelsotos@gmail.com">stelsotos@gmail.com</a> or add me on <a href="https://www.linkedin.com/in/stellasotos/">LinkedIn</a>!
+      Email me at <a href="mailto:stelsotos@gmail.com">stelsotos@gmail.com</a>, add me on <a href="https://www.linkedin.com/in/stellasotos/">LinkedIn</a>, or take a look at some of my code on <a href="https://github.com/stella-sotos">GitHub</a>!
     </div>
    </div>
   </body>
