updated to include github graph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146161243-1"></script>
+  <script
+  src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"
+>
+</script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
@@ -105,7 +109,15 @@
         </div>
       </div>
       <div class="experience-buttons">
-   		<a href="files/SSotos.Resume.8.19.pdf"><div class ="connect-button left">resume</div></a><a href="https://www.linkedin.com/in/stellasotos/"><div class ="connect-button right">linkedin</div></a></div>
+   		 <a href="files/SSotos.Resume.8.19.pdf"><div class ="connect-button left">resume</div></a>   
+       <a href="https://www.linkedin.com/in/stellasotos/"><div class ="connect-button">linkedin</div></a><a href="https://github.com/stella-sotos"><div class ="connect-button right">github</div></a></div>
+      <div class="calendar">
+    <!-- Loading stuff -->
+    Loading the data just for you.
+</div>
+<script>
+    new GitHubCalendar(".calendar", "stella-sotos");
+</script>
 	</div>
 </div>
    
