--- a/blog.html
+++ b/blog.html
@@ -28,12 +28,12 @@
   	</div>
     <div class="blog-landing">
       <div class="name-banner">
-        <p>stella's blog</p>
+        <h1>stella's blog</h1>
       </div>
       <div class="circle blog-circle"><p >check out my newest post:</p> <div class="circle-text">Welcome to My Personal Site!</div></div>
     </div>
     <div class="newest-posts content">
-        <div class="section-title">my newest posts</div>
+        <div class="section-title"><h2>my newest posts</h2></div>
         <div class="posts-grid">
           <div class="posts-row"><div class="post-square newest-square">
             Welcome to My Personal Site!</div><div class="post-square second-square">A Great Summer at Capital One
@@ -45,7 +45,7 @@
     </div>
     <div class="blog-section content">
       <div class="story welcome-story">
-        <div class="section-title">Welcome to My Personal Site!</div>
+        <div class="section-title"><h2>Welcome to My Personal Site!</h2></div>
         <div class="blog-date">August 20, 2019</div>
         <div class="blog-content">Thanks for stopping by! I built this site as a way to fully represent who I am to those who might know me only as a name on a resume. In this blog I hope to cover all the different things that interest and excite me. I'd love to write posts on exciting tech innovations, running my first marathon, my journey as a vegan and more! <br><br>If you have any questions on this site, who I am, or anything else feel free to contact me at <a href="mailto:stelsots@gmail.com">stelsotos@gmail.com</a>. This site is a work in progress, but I'd still love to hear any feedback or if you find any bugs :) <br><br>Thanks! <br>Stella </div>
         <div class="blog-tags ">
@@ -53,18 +53,18 @@
         </div>
       </div>
       <div class="story capone-story">
-        <div class="section-title">A Great Summer at Capital One</div>
+        <div class="section-title"><h2>A Great Summer at Capital One</h2></div>
         <div class="blog-date">August 8, 2019</div>
         <div class="blog-content">I've had a wonderful experience during my 10-week software engineering internship at Capital One in the McLean headquarters. It was exciting to be fully integrated into an agile team and to release my own code to the consumer-facing credit card application. I couldn't believe how quickly I was able to make real contributions to projects that will have a significant impact on the business. I am also excited to share that I have recently received my certification as an Amazon Web Services Developer Associate. <br><br>Huge thank you to my team, the Mighty Minions, my manager, Khosro Akhavan Astaneh and my teammates: Derek Warren, James Guan, Isaac Cyril, Jun Li, Sunil Chakrahari, and Rabin Paudyal. This internship has allowed me to grow so much in both my technological and professional skills. Thank you again to my fantastic team and to Capital One for the amazing opportunity.</div>
         <div class="blog-images">
-          <img src="images/c1team.jpeg" class="left-blog"/><img src="images/awsCert.png" class="right-blog"/>
+          <img src="images/c1team.jpeg" alt="Stella Sotos with Capital One software engineering internship team members" class="left-blog"/><img src="images/awsCert.png" class="right-blog" alt="Stella Sotos's Amazon Web Services (AWS) Certification"/>
         </div>
         <div class="blog-tags ">
           <div class="tag hide">#capitalone</div><div class="tag ">#womenintech</div>
         </div>
       </div>
       <div class="story hide">
-        <div class="section-title">Blog Post Template</div>
+        <div class="section-title"><h2>Blog Post Template</h2></div>
         <div class="blog-date">Month dd, YEAR</div>
         <div class="blog-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -85,7 +85,7 @@
     </div>
 
     <div class="allposts content ">
-        <div class="section-title">all posts</div>
+        <div class="section-title"><h2>all posts</h2></div>
         <div class="two-col">
           <div class="my-col">
             <ul>
