--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
   	</div>
   	<div class="landing">
   		<div class="name-banner">
-  			<p>stella sotos</p>
+  			<h1>stella sotos</h1>
   		</div>
   		<div class="circle">
-      <img src="images/pfp.jpg" />
+      <img src="images/pfp.jpg" alt="Stella Sotos, University of Virginia Computer Science Student"/>
       </div>
   	</div>
    <div class="about">
-   	<div class="section-title">about me</div>
+   	<div class="section-title"><h2>about me</h2></div>
    	<div class="content">
-   		<div class="about-rectangle"><img src="images/run.jpg" /></div><div class="about-text"><p>I'm a fourth year at the University of Virgina studying computer science and math. I've fallen in love with New York City and am hoping to live there after I graduate in May of 2020. I've been coding since high school and am so excited to be beginning my career as a software engineer. I give my all to everything that I do whether that be my school work, my job, or my hobbies. In my freetime, I love to run marathons, do yoga, and cook yummy vegan meals.</p><p>In my past internships I've gained a wide variety of experience. At Capital One I learned what it's like to work within an agile team and I loved it! It was so exciting and rewarding to contribute meaningful code to the consumer-facing application. Prior to that, my experience was within start-up companies. There, I was able to contribute to a variety of aspects of business spanning research, marketing, design and web development. I've gained so much from these summers and am thrilled to continue growing in my career as a developer.</p><p class="blog-shout-out">Want to learn more about me and my interests? <a href="blog.html">Check out my blog!</a></p></div>
+   		<div class="about-rectangle"><img src="images/run.jpg" alt="Stella Sotos, running a marathon"  /></div><div class="about-text"><p>I'm a fourth year at the University of Virgina studying computer science and math. I've fallen in love with New York City and am hoping to live there after I graduate in May of 2020. I've been coding since high school and am so excited to be beginning my career as a software engineer. I give my all to everything that I do whether that be my school work, my job, or my hobbies. In my freetime, I love to run marathons, do yoga, and cook yummy vegan meals.</p><p>In my past internships I've gained a wide variety of experience. At Capital One I learned what it's like to work within an agile team and I loved it! It was so exciting and rewarding to contribute meaningful code to the consumer-facing application. Prior to that, my experience was within start-up companies. There, I was able to contribute to a variety of aspects of business spanning research, marketing, design and web development. I've gained so much from these summers and am thrilled to continue growing in my career as a developer.</p><p class="blog-shout-out">Want to learn more about me and my interests? <a href="blog.html">Check out my blog!</a></p></div>
 
    	</div>
    </div>
    <div class="experience">
-   	<div class="section-title">my experience</div>
+   	<div class="section-title"><h2>my experience</h2></div>
    	<div class="content">
       <div class="history">
         <div class="work-item">
           <div class="work-logo">
-            <img src ="images/capitalone.png"/>
+            <img src ="images/capitalone.png" alt="Capital One logo"/>
             <div class="work-date">Summer 2019</div>
           </div><div class="work-info">
             <div class="work-title">Software Engineering Intern</div>
@@ -60,7 +60,7 @@
         </div>
         <div class="work-item">
           <div class="work-logo">
-            <img src ="images/aws.png"/>
+            <img src ="images/aws.png" alt="Amazon Web Services (AWS) logo"/>
             <div class="work-date">2019-2022</div>
           </div><div class="work-info">
             <div class="work-title">AWS - Certified Developer Associtate</div>
@@ -69,7 +69,7 @@
         </div>
       <div class="work-item">
           <div class="work-logo">
-            <img src ="images/hackcville.png"/>
+            <img src ="images/hackcville.png" alt="HackCville logo"/>
             <div class="work-date">Summer 2018</div>
           </div><div class="work-info">
             <div class="work-title">Launch Academy - Web Design Intern</div>
@@ -80,7 +80,7 @@
         </div>
         <div class="work-item">
           <div class="work-logo">
-            <img src ="images/cavdaily.png"/>
+            <img src ="images/cavdaily.png" alt="Cavalier Daily logo"/>
             <div class="work-date">2017-2018</div>
           </div><div class="work-info">
             <div class="work-title">Senior Writer - Health and Sciences</div>
@@ -100,7 +100,7 @@
         </div>
         <div class="work-item">
           <div class="work-logo">
-            <img src ="images/uva.png"/>
+            <img src ="images/uva.png" alt="University of Virginia logo"/>
             <div class="work-date">2016-2020</div>
           </div><div class="work-info">
             <div class="work-title">Computer Science and Math Major</div>
@@ -122,7 +122,7 @@
 </div>
    
    <div class="connect">
-   	<div class="section-title">let's connect!</div>
+   	<div class="section-title"><h2>let's connect!</h2></div>
     <div class="content">
       Email me at <a href="mailto:stelsotos@gmail.com">stelsotos@gmail.com</a>, add me on <a href="https://www.linkedin.com/in/stellasotos/">LinkedIn</a>, or take a look at some of my code on <a href="https://github.com/stella-sotos">GitHub</a>!
     </div>
