included high school on personal site

--- a/index.html
+++ b/index.html
@@ -107,13 +107,21 @@
             <div class="work-desc">I am a student in the College of Arts and Sciences at the University of Virgina with a double major in computer science and math. I expect to graduate in May of 2020. <br><br> During my time at the University, I have volunteered as an assistant coach for a local elementary school's Girls on the Run. The program aims to promote positive attitudes and healthy lifestyles in young girls. I have also volunteered with English Speakers of Other Languages (ESOL) at Charlottesville's Buford Middle School tutoring Spanish-speaking students in Math.</div>
           </div>
         </div>
+        <div class="work-item">
+          <div class="work-logo">
+            <img src ="images/tj.png" alt="Thomas Jefferson High School logo"/>
+            <div class="work-date">2012-2016</div>
+          </div><div class="work-info">
+            <div class="work-title">Science and Tech Magnet School</div>
+            <div class="work-desc">Thomas Jefferson High School for Science and Technology (TJHSST) is a rigorous STEM magnet school. Each student at TJHSST completes a senior research project and a number of prerequisite courses in order to participate in a designated track. I concentrated in the Web and Mobile Development track. For my project, I created a Google Chrome extension that dynamically suggests synonyms to users as they type emails or other text in the web browser. When a user overuses a word, the extension suggests an alternate for the user to use instead and automatically replaces the word if the user elects to use the synonym. At TJHSST, I was also involved in a number of extracurricular activities including the Red Cross, an all-female coding club, tutoring, varsity lacrosse and varsity field hockey.</div>
+          </div>
+        </div>
       </div>
       <div class="experience-buttons">
    		 <a href="files/SSotos.Resume.8.19.pdf"><div class ="connect-button left">resume</div></a>   
        <a href="https://www.linkedin.com/in/stellasotos/"><div class ="connect-button">linkedin</div></a><a href="https://github.com/stella-sotos"><div class ="connect-button right">github</div></a></div>
       <div class="calendar">
     <!-- Loading stuff -->
-    Loading the data just for you.
 </div>
 <script>
     new GitHubCalendar(".calendar", "stella-sotos");
