--- a/blog.html
+++ b/blog.html
@@ -30,12 +30,12 @@
       <div class="name-banner">
         <h1>stella's blog</h1>
       </div>
-      <div class="circle blog-circle"><p >check out my newest post:</p> <div class="circle-text">My Recruiting Experience</div></div>
+      <div class="circle blog-circle"><p >check out my newest post:</p> <div class="circle-text">My Grace Hopper Experience</div></div>
     </div>
     <div class="newest-posts content">
         <div class="section-title"><h2>my newest posts</h2></div>
         <div class="posts-grid">
-          <div class="posts-row"><div class="post-square recruiting-square">My Recruiting Experience
+          <div class="posts-row"><div class="post-square ghc-square">My Grace Hopper Experience
            </div><div class="post-square welcome-square"> Welcome to My Personal Site!
             </div></div><div class="posts-row"><div class="post-square capone-square">A Great Summer<br> at Capital One</div><div class="post-square  fade">coming soon!
             </div></div>
@@ -44,16 +44,32 @@
 
     </div>
     <div class="blog-section content">
-      <div class="story recruiting-story">
+      <div class="story recruiting-story hide">
         <div class="section-title"><h2>Recruiting Post (Update Title, tbd)</h2></div>
         <div class="blog-date">October 30, 2019</div>
         <div class="blog-content">
           Recruiting is stressful! I've been figuring out where I'll be working full-time since July - JULY! It's the end of October now, and at last I know where I'm ending up. It wasn't easy getting here, but now that I'm on the otherside, I thought I'd share my experiences.<br><br>
-          I started off in a good spot - I loved my internship and was lucky enough to receive a return offer. From there I narrowed my search to companies I would consider going to over Capital One. In the summer, I started reaching out to my network including any recruiters I had spoken to during my internship search and friends who worked or interned at companies I was interested in. I'm still pretty connected to many of my high school classmates which proved super helpful during this stage (shoutout TJHSST!).<br><br>
+          I started off in a good spot - I loved my internship and was lucky enough to receive a return offer. From there I narrowed my search to companies I would consider going to over Capital One. In the summer, I started reaching out to my network including any recruiters I had spoken to during my internship search and friends who worked or interned at companies I was interested in. I'm still pretty connected to many of my high school classmates which proved super helpful during this stage (shoutout TJHSST!). I also attended the Grace Hopper Celebration in Orlando, Florida which was a great networking opportunity.<br><br>
           Soon enough, I was interviewing all over the place. Some companies required coding challenges, while others went straight to phone screens. Regardless, I had to seriously brush up on my technical interview skills. My primary resources were LeetCode for practice problems, the book, Elements of Programming Interviews (EPI), and the YouTube channel, Back To Back SWE. I focused mostly on improving my dynamic programming skills and algorithm knowledge, as well as just being quicker on my feet when it came to common types of interview questions. I visited a few companies on-site and I was surprised by how prepared I felt. However, I don't think it was my technical knowledge that ended up helping me get my offers, instead I believe it was my communication skills that gave me my edge. I talked my interviewers through each stage of my thought process, thouroughly tested my code over edge cases, and iterated as necessary. In one of my first interviews I was sure that I flunked the technical problem I was given, but at the very end my interviewer told me that she liked how I thought. I ended up getting that offer. Communication skills can make all the difference!<br><br>
-          It was a lot to manage, but once I got through all my interviews I was so excited to receieve a few offers. The decision, on the other hand, started to get me down. I loved my internship at Capital One and they offered me a spot in New York, where I so badly wanted to be. On the other hand, I received incredible offers from Microsoft and Facebook. The opportunity for learning and growth at those companies would be hard to turn down. <... talk about actual decision> </div>
+          It was a lot to manage, but once I got through all my interviews I was so excited to receieve a few offers. The decision, on the other hand, started to get me down. I loved my internship at Capital One and they offered me a spot in New York, where I so badly wanted to be. On the other hand, I received incredible offers from Microsoft, Amazon, and Facebook. The opportunity for learning and growth at those companies would be hard to turn down. <... talk about actual decision> </div>
         <div class="blog-tags">
           <div class="tag">#recruiting</div><div class="tag">#futureEngineer</div>
+        </div>
+      </div>
+      <div class="story ghc-story">
+        <div class="section-title"><h2>My Grace Hopper Experience</h2></div>
+        <div class="blog-date">October 5, 2019</div>
+        <div class="blog-content">The Grace Hopper Celebration of Women In Computing is a 4-day event held every year. The conference aims to inspire and empower young women entering the tech industry through speakers, events, mentoring, and a massive career fair. I attended this year's event from October 1-4 in Orlando, Florida. <br><br>
+        I was lucky enough to receive a sponsorship to attend through my school, the University of Virginia, since event registration alone costs hundreds of dollars not to mention the costs of flights and hotels. I planned my trip back in July, when I had barely begun recruiting for full-time positions with no idea of where I would be in the process months later in October. When I registered, I uploaded my resume to the GHC career portal and soon companies began contacting me. Although I had no interviews at GHC, I did receive invites to various companies' events. <br><br>
+        Fast forward to the week of the event and I was already deep in the recruiting process with a few offers under my belt. I faced Grace Hopper with the goal of connecting with a few specific companies. I spent the majority of GHC at the incredible carreer fair, waiting in lines to speak with recruiters and learn about the opportunities at these companies (and collecting some cool swag along the way!). I gave these recruiters my resume and pitched myself to them. I made sure to ask about what the next steps would be and if they could work within my approaching offer deadline. I came away from this with a some new LinkedIn connections and some new leads on exciting jobs.<br><br>
+        One of the the best aspects of Grace Hopper was being able to reconnect with some of my best friends from high school and my internships. It was awesome to meet up with everyone again, share our experiences with recruiting, and offer eachother advice. I went to a Capital One event and it was great to see all of my intern friends, my recruiter, and everyone else from the summer. I also spent an evening at Disney World's Magic Kingdom with my best friend from high school. It was amazing to have a whole network of women in tech surrounding me.<br><br>
+        My week at the Grace Hopper Celebration was well worth the school I missed. I had so much fun in Orlando and made and strengthened many valuable connections with fellow women in tech. I hope I'm able to attend next year - hopefully from the other side, helping the next class of young women.
+        <div class="blog-images-3">
+          <img src="images/ghc2019_3.jpg" alt="Stella Sotos with Juliana Bain at the Grace Hopper Celebration" class="left-blog"/><img src="images/ghc2019_1.jpg" alt="Stella Sotos with friends from Capital One internship" class="mid-blog"/><img src="images/ghc2019_5.jpg" alt="Stella Sotos with Facebook sign" class="right-blog"/>
+        </div>
+        </div>
+        <div class="blog-tags ">
+          <div class="tag hide">#ghc19</div>
         </div>
       </div>
       <div class="story welcome-story">
@@ -101,7 +117,7 @@
         <div class="two-col">
           <div class="my-col">
             <ul>
-              <li class="recruiting-link">Recruiting Post</li>
+              <li class="ghc-link">My Grace Hopper Experience</li>
               <li class="welcome-link">Welcome to My Personal Site!</li>
               <li class="capone-link">A Great Summer at Capital One</li>
             </ul>
@@ -116,12 +132,12 @@
   <script type="text/javascript">
     $('.blog-circle').click(() => {
       $('html, body').animate({
-          scrollTop: $('.recruiting-story').offset().top
+          scrollTop: $('.ghc-story').offset().top
       }, 200);
     });
-    $('.recruiting-square').click(() => {
+    $('.ghc-square').click(() => {
       $('html, body').animate({
-          scrollTop: $('.recruiting-story').offset().top
+          scrollTop: $('.ghc-story').offset().top
       }, 200);
     });
     $('.welcome-square').click(() => {
@@ -134,9 +150,9 @@
           scrollTop: $('.capone-story').offset().top
       }, 200);
     });
-    $('.recruiting-link').click(() => {
+    $('.ghc-link').click(() => {
       $('html, body').animate({
-          scrollTop: $('.recruiting-story').offset().top
+          scrollTop: $('.ghc-story').offset().top
       }, 200);
     });
     $('.welcome-link').click(() => {
