--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
       <div class="history">
         <div class="work-item">
           <div class="work-logo">
+            <img src ="images/fb.png" alt="Facebook logo"/>
+            <div class="work-date">Fall 2020</div>
+          </div><div class="work-info">
+            <div class="work-title">Incoming Software Engineer at Facebook</div>
+            <div class="work-desc "><p></p></div>
+          </div>
+        </div>
+        <div class="work-item">
+          <div class="work-logo">
             <img src ="images/capitalone.png" alt="Capital One logo"/>
             <div class="work-date">Summer 2019</div>
           </div><div class="work-info">
@@ -132,9 +141,13 @@
    <div class="connect">
    	<div class="section-title"><h2>let's connect!</h2></div>
     <div class="content">
-      Email me at <a href="mailto:stelsotos@gmail.com">stelsotos@gmail.com</a>, add me on <a href="https://www.linkedin.com/in/stellasotos/">LinkedIn</a>, or take a look at some of my code on <a href="https://github.com/stella-sotos">GitHub</a>!
+      Email me at <a href="mailto:stelsotos@gmail.com">stelsotos@gmail.com</a>, add me on <a href="https://www.linkedin.com/in/stellasotos/">LinkedIn</a>, or take a look at some of my code on <a href="https://github.com/stella-sotos">GitHub</a>!  
+      <div class = "socials">
+       <img src="images/linkedin.png"/><img src="images/facebook.png"/><img src="images/twitter.png"/><img src="images/instagram.png"/>
+      </div>
     </div>
    </div>
+   
   </body>
   <script type="text/javascript">
     $('.about-link').click(() => {
